# mookme_sample

./: .gitignore  Dockerfile  README.md
.hooks/: pre-commit.json
backend/: Makefile  pyproject.toml
backend/.hooks/: pre-commit.json
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
